--- a/HappyWayApp/ClientApp/src/app/components/layout/layout.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/layout/layout.component.html
@@ -28,7 +28,7 @@
       </ng-container>
       <a mat-list-item routerLink="/home">
         <mat-icon>favorite</mat-icon>
-        <span class="nav-caption">Рассчитать симпатии</span>
+        <span class="nav-caption">Расставить симпатии</span>
       </a>
       <a mat-list-item routerLink="/results">
         <mat-icon>message</mat-icon>
@@ -61,9 +61,6 @@
       <div class="app-title">Happy Way <mat-icon>favorite</mat-icon></div>
       <span class="fill-remaining-space"></span>
       <app-sex-select *ngIf="loggedIn"></app-sex-select>
-      <!-- <input [matDatepicker]="picker" class="hide" (dateChange)="dateChange($event)">
-      <mat-datepicker #picker></mat-datepicker>
-      <mat-datepicker-toggle [for]="picker"></mat-datepicker-toggle> -->
     </mat-toolbar>
     <main>
       <router-outlet></router-outlet>
